--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^1.0.3",
+    "bcrypt": "1.0.3",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
-    "express": "^4.16.2",
+    "express": "4.16.2",
     "express-jwt": "^5.3.0",
     "express-jwt-permissions": "^1.0.0",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.1.0",
     "md5": "^2.2.1",
+    "mongoose": "5.0.0-rc0",
     "mysql2": "^1.5.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
